--- a/Web.Statu/Views/Weby/Dalsi.cshtml
+++ b/Web.Statu/Views/Weby/Dalsi.cshtml
@@ -41,35 +41,36 @@
         <li><a href="@Url.Action("Index","Weby")">Hlídač Webů</a></li>
         <li class="active">@ViewBag.SubTitle</li>
     </ol>
-    }
+}
+@Html.Partial("~/Views/Weby/_Info.cshtml", this.ViewData)
 
 
-    <h2>Dostupnost důležitých služeb <small>za posledních 24 hodin</small></h2>
-    <div class="row">
-        <div class="col-sm-12">
-            @UtilWebyChart.Chart(ViewBag.ID, 48, 150 + 35 * (numOfWebs), false)
-        </div>
+<h2>Dostupnost důležitých služeb <small>za posledních 24 hodin</small></h2>
+<div class="row">
+    <div class="col-sm-12">
+        @UtilWebyChart.Chart(ViewBag.ID, 48, 150 + 35 * (numOfWebs), false)
     </div>
+</div>
 
 
-    <div class="clearfix"></div>
-    @UtilWebyChart.TableNextGroups(Request.QueryString["id"])
+<div class="clearfix"></div>
+@UtilWebyChart.TableNextGroups(Request.QueryString["id"])
 
-    <div class="bs-callout bs-callout-primary">
-        <h4>Hlídání dostupnosti státní webů. Co to vlastně děláme?</h4>
-        <p>
-            Měříme každou minutu, zda důležité weby státu vůbec běží, a pokud ano, tak jak rychle odpovídají. A tomu odpovídají i zobrazené barvy.
-            Pokud služba odpovídá rychle, dáváme <b style="color:@(ZabAvailability.GetStatusChartColor(Statuses.OK))">zelenou - v pořádku</b>.
-            Pokud odpovídá déle, dáváme <b style="color:@(ZabAvailability.GetStatusChartColor(Statuses.Pomalé))">oranžovou - pomalá odpověď.</b>.
-            Pokud neodpoví nebo odpoví za dlouhou dobu, použijeme <b style="color:@(ZabAvailability.GetStatusChartColor(Statuses.Nedostupné))">červenou za nedostupnost</b>.
-        </p>
-        <p>
-            <a href="@Url.Action("JakMerime", "Weby")">Podrobný popis měření a hodnocení</a>.
-        </p>
-    </div>
+<div class="bs-callout bs-callout-primary">
+    <h4>Hlídání dostupnosti státní webů. Co to vlastně děláme?</h4>
+    <p>
+        Měříme každou minutu, zda důležité weby státu vůbec běží, a pokud ano, tak jak rychle odpovídají. A tomu odpovídají i zobrazené barvy.
+        Pokud služba odpovídá rychle, dáváme <b style="color:@(ZabAvailability.GetStatusChartColor(Statuses.OK))">zelenou - v pořádku</b>.
+        Pokud odpovídá déle, dáváme <b style="color:@(ZabAvailability.GetStatusChartColor(Statuses.Pomalé))">oranžovou - pomalá odpověď.</b>.
+        Pokud neodpoví nebo odpoví za dlouhou dobu, použijeme <b style="color:@(ZabAvailability.GetStatusChartColor(Statuses.Nedostupné))">červenou za nedostupnost</b>.
+    </p>
+    <p>
+        <a href="@Url.Action("JakMerime", "Weby")">Podrobný popis měření a hodnocení</a>.
+    </p>
+</div>
 
-    <p class="text-muted">Údaje na této stránce mohou být až 20 minut staré.</p>
+<p class="text-muted">Údaje na této stránce mohou být až 20 minut staré.</p>
 
-    @section footerscripts{
-    }
+@section footerscripts{
+}
 
